# zellij-talk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  design.md  pyproject.toml  registry.json.example
scripts/: __init__.py  ack.py  auto-register.sh  broadcast.sh  cli.py  from.sh  health.sh  list.sh  logger.py  memory.py  multicast.sh  paths.py  pipeline.py  prune.sh  queue.py  register.sh  registry.py  reply_queue.py  review.sh  send-file.sh  stats.py  to.sh  unregister-all.sh  unregister.sh  wait.sh  watch.sh  zellij.py
skills/: broadcast.sh  review.sh
src/zellij_talk/: cli.py  registry.py
