[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zellij-talk"
version = "1.1.0"
description = "Multi-agent collaboration framework based on Zellij terminal multiplexer"
requires-python = ">=3.9"

[project.scripts]
zellij-talk = "zellij_talk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zellij_talk"]
