[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zellij-talk"
version = "1.2.0"
description = "Multi-Agent collaboration framework based on Zellij terminal multiplexer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "filelock>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
zt = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["scripts"]
